# python-ripcordclient

./: .gitignore  .gitreview  .testr.conf  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
ripcordclient/: client.py  test.py  version.py
ripcordclient/cmd/: shell.py
ripcordclient/common/: base.py  exception.py  http.py  utils.py
ripcordclient/openstack/common/: gettextutils.py  jsonutils.py  log.py  strutils.py
ripcordclient/shell/v1/: base.py  domain.py  subscriber.py
ripcordclient/tests/: utils.py
ripcordclient/tests/v1/: test_domain.py  test_subscriber.py
ripcordclient/v1/: client.py  domain.py  subscriber.py
