[metadata]
name = python-ripcordclient
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
summary = Client library for Ripcord API
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[pbr]
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    ripcordclient

[entry_points]
console_scripts =
    ripcord = ripcordclient.cmd.shell:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
